2007-03-12  Seongbae Park <seongbae.park@gmail.com>

 	* gcc.dg/wvla-1.c: New test
 	* gcc.dg/wvla-2.c: New test
 	* gcc.dg/wvla-3.c: New test
 	* gcc.dg/wvla-4.c: New test
 	* gcc.dg/wvla-5.c: New test
 	* gcc.dg/wvla-6.c: New test
 	* gcc.dg/wvla-7.c: New test
	* g++.dg/warn/Wvla-1.C: New test
	* g++.dg/warn/Wvla-2.C: New test
	* g++.dg/warn/Wvla-3.C: New test

2007-03-12  Mark Mitchell  <mark@codesourcery.com>

	PR c++/30108
	* g++.dg/other/default6.C: New test.

2007-03-12  Richard Sandiford  <richard@codesourcery.com>

	* lib/target-supports.exp (check_profiling_available): Return false
	for VxWorks.
	(check_effective_target_vxworks_kernel): New procedure.
	* gcc.dg/20040813-1.c: Extend list of stabless targets to include
	VxWorks.
	* gcc.dg/builtins-config.h: Do not define HAVE_C99_RUNTIME on VxWorks.
	* gcc.dg/intmax_t-1.c: Extend the list of targets without inttypes.h
	to include VxWorks.
	* gcc.dg/vxworks/initpri2.c: Require vxworks_kernel.

2007-03-12  Richard Sandiford  <richard@codesourcery.com>

	* gcc.c-torture/compile/981006-1.c: Use the non-PIC options if
	PIC is not supported.
	* gcc.dg/20020103-1.c: Add dg-require-effective-target fpic.
	* gcc.dg/20020426-2.c: Likewise.
	* gcc.dg/pr28243.c: Likewise.
	* gcc.dg/visibility-11.c: Likewise.
	* gcc.dg/tls/opt-9.c: Likewise.
	* gcc.dg/tls/opt-10.c: Likewise.
	* gcc.dg/tls/pic-1.c: Likewise.
	* gcc.dg/tls/struct-1.c: Likewise.
	* gcc.target/i386/20000807-1.c: Likewise.
	* gcc.target/i386/20000904-1.c: Likewise.
	* gcc.target/i386/20011119-1.c: Likewise.
	* gcc.target/i386/990213-2.c: Likewise.
	* gcc.target/i386/990214-1.c: Likewise.
	* gcc.target/i386/compress-float-387-pic.c: Likewise.
	* gcc.target/i386/compress-float-sse-pic.c: Likewise.
	* gcc.target/i386/pic-1.c: Likewise.
	* gcc.target/i386/pr21518.c: Likewise.
	* gcc.target/i386/pr23098.c: Likewise.
	* gcc.target/i386/pr23943.c: Likewise.

2007-03-11  Mark Mitchell  <mark@codesourcery.com>

	PR c++/31038
	* g++.dg/template/complit2.C: New test.
